objects/CMPL123__AcknowledgementMapping__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__AckNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>AckNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__IndividualUser__c</fullName>
        <label>IndividualUser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__MDC_Trigger_Acknowledgment__c</fullName>
        <label>MDC Trigger Acknowledgment</label>
        <referenceTo>CMPL123__MDC_Trigger__c</referenceTo>
        <relationshipName>MDCAcknowledgmentMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMPL123__PublicGroupAcknowledgment__c</fullName>
        <label>PublicGroupAcknowledgment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__SelectObject__c</fullName>
        <label>SelectObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__User_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Field</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDCAcknowledgementMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__UsersFieldAcknowledgment__c</fullName>
        <label>UsersFieldAcknowledgment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Mapping the Users and Public Group fields for Acknowledgement from the MDC Trigger Object</description>
    <label>MDCAcknowledgementMapping</label>
    <nameField>
        <displayFormat>Ack-{00000}</displayFormat>
        <label>AcknowledgementMapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDCAcknowledgementMappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>CMPL123__PublicGroupAcknowledgmentValidation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(CMPL123__AckNumber__c)</errorConditionFormula>
        <errorMessage>Public Grouup Acknowledgement number field cannot be zero</errorMessage>
    </validationRules>
</CustomObject>